# energy-demand-forecasting

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/endpoints/: forecast.py
app/core/: config.py  telemetry.py
app/models/: forecast.py  response.py
app/utils/: trace.py
apps/da-svc/: Dockerfile  pyproject.toml
apps/da-svc/app/: main.py
apps/id-svc/: Dockerfile  pyproject.toml
apps/id-svc/app/: main.py
dbt/: dbt_setup.yml
dbt/models/: energy_features.sql  stg_energy.sql
docs/: architecture.md  assumptions.md  slos-and-slas.md  system-design.md
docs/adr/: ADR-001-service-boundaries.md  ADR-002-batch-vs-streaming.md  ADR-003-why-flink-for-intraday.md  ADR-004-feature-store-design.md  ADR-005-otel-observability.md  ADR-006-drift-detection-and-actions.md  ADR-007-intraday_forecast_cadence_and_horizon.md
docs/runbooks/: drift-alert.md  flink-job-failure.md  ingestion-delay.md  model-quality-drop.md  rollback.md
feast/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
feature_repo/: data_source.py  entities.py  feature_store.yml  feature_views.py
infra/airflow/: Dockerfile
infra/airflow/dags/: dayahead_batch_inference.py  dayahead_ingestion.py  dayahead_retraining.py  dayahead_training.py
infra/compose/: docker-compose.yml  loki.yaml  otel-collector.yaml  prometheus.yaml  promtail.yaml
infra/compose/observability/: loki.yaml  otel-collector.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
infra/observability/: otel-collector.yaml  prometheus.yaml  tempo.yaml
infra/orchestrator/: Dockerfile
libs/: pyproject.toml
libs/common/: config.py  otel.py
libs/core/: config.py  io.py
libs/observability/: __init__.py  http_instrumentation.py  logging.py  metrics.py  tracing.py
pipelines/inference/: dayahead_batch_forecast.py
pipelines/monitoring/: backfill_day_ahead_actuals.py  compute_day_ahead_metrics.py  detect_drift_day_ahead.py
platform/common/: __init__.py  bootstrap.py  config.py  error.py  http_instrumentation.py  logging.py  metrics.py  time_utils.py  tracing.py
scripts/: ingest_opsd.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/app/api/middleware/: auth.py  rate_limit.py
services/api_gateway/app/api/routes/: health.py
services/api_gateway/app/core/: clients.py  config.py  exceptions.py  logging.py  metrics.py  observability.py
tests/unit/: test_drift_psi.py  test_metrics_mape.py
(+24 files in other folders)
