[project]
name = "energy-demand-forecasting"
version = "0.1.0"
description = "Production-grade day-ahead and intraday energy demand forecasting platform"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "sqlalchemy",
  "psycopg2-binary",
  "redis",
  "kafka-python",
  "mlflow",
  "numpy",
  "pandas",
  "scikit-learn",
  "lightgbm",
  "pyarrow",
  "apache-flink",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-requests"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
