[project]
name = "common"
version = "0.0.1"
description = "Shared utils: config, otel, feast/mlflow/kafka IO, DTOs"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "requests>=2.32",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
