[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",

  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
  "opentelemetry-exporter-otlp>=1.26",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-httpx>=0.47b0",
  "opentelemetry-instrumentation-requests>=0.47b0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.2",
]
